# Riru

./: .gitattributes  .gitignore  README.md  README.zh-CN.md  build.bat  build.gradle  build.sh  gradle.properties  settings.gradle
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: issue.yml  main.yml
aar/: riru-10.aar  riru-10.pom
app/: .gitignore  build.gradle  proguard-rules.pro  signing.gradle
app/src/androidTest/java/moe/riru/manager/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/rikka/riru/: IService.aidl
app/src/main/cpp/: CMakeLists.txt  helper.cpp  logging.h
app/src/main/java/moe/riru/manager/: MainActivity.java  MainActivity.kt  Riru.kt
app/src/main/java/moe/riru/manager/app/: AppActivity.java  BaseActivity.java
app/src/main/java/moe/riru/manager/utils/: BuildUtils.java  NativeHelper.java
app/src/main/java/rikka/riru/: MainActivity.kt  Riru.kt  Service.kt
app/src/main/res/layout/: main_activity.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: styles.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/test/java/moe/riru/manager/: ExampleUnitTest.java
core/: build.gradle
core/src/main/cpp/: CMakeLists.txt  api.cpp  api.h  config.h  hide_utils.cpp  jni_native_method.cpp  jni_native_method.h  loader.cpp  main.cpp  misc.h  module.cpp  module.h  status.cpp  status.h
core/src/main/cpp/include/: native_bridge_25.h  native_bridge_29.h  native_bridge_30.h
core/src/main/java/riru/: Daemon.java
flatbuffers/: status.fbs
gradle/wrapper/: gradle-wrapper.properties
module/: build.gradle
module/src/main/: AndroidManifest.xml
module/src/main/cpp/: CMakeLists.txt  JNIHelper.h  config.h  hide.cpp  hide_utils.cpp  jni_native_method.cpp  jni_native_method.h  logging.h  main.cpp  misc.cpp  misc.h  module.cpp  module.h  native_method.cpp  native_method.h  pmparser.h  redirect_memtrack.cpp  riru.c  riru.h  status.cpp  version.cpp  version.h  wrap.cpp  zygote_restart.cpp
module/src/main/cpp/include/: riru.h
module/src/main/cpp/xhook/: CMakeLists.txt
riru/: build.gradle  proguard-rules.pro
riru-api/: build.gradle
riru-api/src/main/cpp/: CMakeLists.txt
riru-core/: build.bat  build.gradle  build.sh
riru-core/jni/: Application.mk
riru-core/jni/main/: Android.mk  JNIHelper.h  api.cpp  api.h  init.cpp  init.h  jni_native_method.cpp  jni_native_method.h  main.cpp  main.h  misc.cpp  misc.h  module.h  native_method.cpp  redirect_memtrack.cpp  version.cpp  version.h  wrap.cpp  wrap.h
riru-core/jni/zygote_restart/: Android.mk  main.cpp
riru-core/src/main/: AndroidManifest.xml
riru-core/template_override/: config.sh  customize.sh  install.sh  module.prop  post-fs-data.sh  uninstall.sh
riru-module-template/: .gitignore  build.bat  build.gradle  build.sh
riru-module-template/jni/: Application.mk
riru-module-template/jni/main/: Android.mk  main.cpp  riru.c
riru-module-template/src/main/: AndroidManifest.xml
riru-module-template/template_override/: config.sh  customize.sh  install.sh  module.prop  riru_module.prop
riru/src/main/: AndroidManifest.xml
riru/src/main/cpp/: .clang-tidy  CMakeLists.txt  api.cpp  api.h  daemon.h  entry.cpp  entry.h  hide_utils.cpp  hide_utils.h  jni_hooks.cpp  jni_hooks.h  jni_native_method.cpp  magisk.cpp  magisk.h  main.cpp  module.cpp  module.h  native_method.cpp  status.cpp  status.h  wrap.h
riru/src/main/cpp/daemon/: daemon.cpp  daemon_utils.cpp  daemon_utils.h  setproctitle.c  setproctitle.h  status.cpp  status.h  status_writter.cpp  status_writter.h
riru/src/main/cpp/hide/: hide.cpp  hide_utils.cpp
riru/src/main/cpp/include/: android_prop.h  buff_string.h  config.h  dl.h  elf_util.h  finally.h  hide_utils.h  locker.h  logging.h  misc.h  module.h  native_bridge_26.h  pmparser.h  rirud.h  selinux.h  socket.h
riru/src/main/cpp/include_generated/: status_generated.h
riru/src/main/cpp/include_riru/: riru.h
riru/src/main/cpp/loader/: loader.cpp  native_bridge_23.h  native_bridge_24.h  native_bridge_27.h  native_bridge_28.h  native_bridge_callbacks.h
riru/src/main/cpp/template/: config.cpp
riru/src/main/cpp/util/: android_prop.cpp  dl.cpp  elf_util.cpp  misc.cpp  plt.c  plt.h  rirud.cpp  selinux.cpp  socket.cpp  tinynew.cpp
riru/src/main/java/riru/: Daemon.java  DaemonSocketServerThread.java  DaemonUtils.java  Installer.java
riru/src/main/java/riru/resource/: Strings.java
rirud/: build.gradle  proguard-rules.pro
rirud/src/main/: AndroidManifest.xml
rirud/src/main/java/riru/: Daemon.java  DaemonSocketServerThread.java  DaemonUtils.java  Installer.java
rirud/src/main/res/: strings.xml
rirud/src/main/res/values/: strings.xml
rirud/src/main/res/values-zh-rCN/: strings.xml
rirud/src/main/res/values-zh-rTW/: strings.xml
stub/: build.gradle
stub/src/main/java/android/os/: SELinux.java  ServiceManager.java  SystemProperties.java
template/aar/: riru.pom
template/aar/riru-sources.jar/: README
template/aar/riru.aar/: AndroidManifest.xml
template/aar/riru.aar/prefab/: prefab.json
template/aar/riru.aar/prefab/modules/riru/: module.json
template/magisk/: .gitattributes
template/magisk_module/: .gitattributes  README.md  customize.sh  module.prop  post-fs-data.sh  rirud  sepolicy.rule  service.sh  system.prop  uninstall.sh  util_functions.sh  verify.sh
